tests/NormalTests/paczka1/fuzzy1/26626089.err
Error in line 5: UUGtTuXx A998 2,95
Error in line 9: I7Ckv S973 920,2
Error in line 7: UUGtTuXx A998 5,8
Error in line 23: A998 A998 27,0
Error in line 24: UUGtTuXx S973 89,7
Error in line 14: Pw2St S973 56,4
Error in line 32: UUGtTuXx A153 104,3
